# job-scraper

./: .gitignore  Pipfile  README.md  buildspec-build.yml  buildspec-deploy.yml  buildspec-linting.yml  buildspec-unittests.yml  pyproject.toml  requirements.txt  serverless.yml
cicd_infrastructure/: README.md  code_build_job_scraper_build.tf  code_build_job_scraper_code_linting.tf  code_build_job_scraper_deploy.tf  code_build_job_scraper_unit_testing.tf  code_pipeline_job_scraper.tf  deployment_artifacts.tf  provider.tf  terraform-backend.tfvars  terraform-deployment.tfvars  variables.tf
job_scraper/: __main__.py  dates_helper.py  dynamo_helper.py  job_filters.json  job_listings.py  job_scraper.py  job_scraper_dynamo.py  job_scraper_notify.py  job_scraper_pandas.py  logger.py  main.py  pandas_helper.py  scrape.py  secrets_helper.py  slack_helper.py
tests/: job_scraper_fixtures.py  test_dates_helper.py  test_dynamo_helper.py  test_helper_dates.py  test_helper_secrets.py  test_helper_slack.py  test_job_scraper.py  test_job_scraper_dynamo.py  test_job_scraper_listing_ops.py  test_job_scraper_pandas.py  test_slack_helper.py
