[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["Maikel"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pandas = "^1.3.5"
boto3 = "^1.28.62"
requests = "^2.31.0"
tabulate = "^0.9.0"
pytest-freezegun = "^0.4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
moto = "^4.2.5"
boto3 = "^1.28.62"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
